styles/style.css
* {
        margin: 0;
        padding: 0;
        border: 0;
        outline: 0;
        font-size: 100%;
        vertical-align: baseline;
        background: transparent;
    }


a:hover {
 color: crimson;
}

a {
 color: black;   
 text-decoration: none;
}

* {
  box-sizing: border-box;
}



body, .header, .list {
text-align: center;
background-color: #ededed;
margin: 0px 0px 0px 0px;
}


.heading, .headering, .list {
 background-color: #ededed;
 margin: 0 0 0 0;
 padding: 6px 0 6px 12px;
 display: absolute;
 text-align: center;
 float: left;
 width: 1%;
 font-family: 'Montserrat', sans-serif;

position: fixed;
left: 25px;
top: 28px;

}



.dropdown-content {
    display: none;
    position: absolute;
    z-index: 1;
    background-color: #ededed;
    padding-right: 3px;
    
}

.dropdown:hover .dropdown-content {
    display: inline;
}

.dropdown {
    position: relative;
    display: inline-block;
}



li {
 display: block;
}

.list {

 width: 18%;
 text-align: center; 
 list-style-type: none;
 float: left;
 display: inline;
 background-color: #ededed;
 font-family: 'Montserrat', sans-serif;
 margin: 0 0 0 0;
 padding: 6px 23px 6px 0;
 position: fixed;
 left: 30px;
 top: 110px
}

ul {
 margin: 0 0 0 0;
 padding: 0 0 0 0;
}





img {
    width: 76.5%;
    float: right;
    margin-right: 3.5%;
    margin-top: 3%;
}

.left {
    margin-right: 1%;

}

.right {
    margin-top: 1%;
}

img:hover {opacity: .97;}

